<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sign_out_menu"
        android:title="@string/sign_out"
        app:showAsAction="never"/>
    <item
        android:id="@+id/fresh_config_menu"
        android:title="@string/fresh_config"
        app:showAsAction="never"/>
    <item
        android:id="@+id/invite_menu"
        android:title="@string/invite_menu_label"/>
    <item
        android:id="@+id/crash_menu"
        android:title="@string/cause_crash"/>
    <item
        android:id="@+id/record"
        android:title="@string/record"
        android:icon="@drawable/ic_record_voice_over_white_24dp"
        app:showAsAction="always"
        android:orderInCategory="4"/>
    <item
        android:id="@+id/cam"
        android:title="@string/cam"
        android:icon="@drawable/ic_photo_camera_white_24dp"
        app:showAsAction="always"
        android:orderInCategory="3"/>
    <item
        android:id="@+id/file"
        android:title="@string/file"
        android:icon="@drawable/ic_attach_file_white_24dp"
        app:showAsAction="always"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/speak"
        android:title="@string/speak"
        android:icon="@drawable/ic_speaker_notes_white_24dp"
        app:showAsAction="always"
        android:orderInCategory="1"/>
    <item
        android:id="@+id/speachtotext"
        android:title="@string/speachtext"
        android:icon="@drawable/ic_speaker_phone_white_24dp"
        app:showAsAction="always"
        android:orderInCategory="0"/>
</menu>
